tests/e2e/no_effectless_expr6.error
Error: syntax error in story at line 3, column 1

3|    a.length()
      ^^^^^^^^

E0161: Effectless expressions without assignment not allowed.
